fix: resolve z-index issues on narrow screens (#2361)
* fix(base): use responsive z-offset for pane header and footer

* feat(desk-tool): wrap document and changes panels in `DialogProvider`

* fix(form-builder): fix z-index of `DateInput`

* refactor(form-builder): remove properties provided by dialog context

--- a/packages/@sanity/form-builder/src/inputs/DateInputs/styles/BaseDateTimeInput.css
+++ b/packages/@sanity/form-builder/src/inputs/DateInputs/styles/BaseDateTimeInput.css
@@ -101,21 +101,6 @@
   }
 }
 
-.portal {
-  composes: frosted from 'part:@sanity/base/theme/layout/backgrounds-style';
-  z-index: var(--zindex-portal);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.portalClosed {
-  display: none;
-}
-
 .popper {
   background-color: transparent;
 
@@ -151,21 +136,21 @@
     width: 8px;
     margin-top: 8px;
   }
-  
+
   @nest & :global(.react-datepicker__navigation--previous) {
     border-width: 0 0 1px 1px;
     margin-left: 4px;
   }
-  
+
   @nest & :global(.react-datepicker__navigation--next) {
     border-width: 1px 1px 0 0;
     margin-right: 4px;
   }
-  
+
   @nest & :global(.react-datepicker__month-select) {
     font-weight: 600;
   }
-  
+
   @nest & :global(.react-datepicker__year-select) {
     font-weight: 600;
   }
@@ -183,7 +168,7 @@
     border-radius: 50%;
     background: var(--brand-primary);
   }
-  
+
   @nest & :global(.react-datepicker__day:hover) {
     border-radius: 50%;
   }
@@ -192,7 +177,7 @@
     background: transparent;
     border-top: 1px solid var(--hairline-color);
   }
-    
+
   @nest & :global(.react-datepicker-time__header) {
     color: var(--main-navigation-color);
     background: transparent;
@@ -213,7 +198,7 @@
   }
 
   @nest & :global(.react-datepicker__header--time) {
-    border-bottom:  1px solid var(--hairline-color);
+    border-bottom: 1px solid var(--hairline-color);
     background: transparent;
   }
 
